syntax = "proto3";
package api;

// AuditService should only create and read user and org audits.
service AuditService {
    // Create a new audit.
    rpc Create(CreateRequest) returns (CreateResponse);
    // ReadUser audit log.
    rpc ReadUser(ReadUserRequest) returns (ReadUserResponse);
    // ReadOrg audit log.
    rpc ReadOrg(ReadOrgRequest) returns (ReadOrgResponse);
  }

message CreateRequest {
    string user_id = 1;
    string org_id = 2;
    string ip_address = 3;
    string target = 4;
    string action = 5;
    string action_type = 6;
    string event_name = 7;
  }
  
  message CreateResponse {
    string response = 1;
  }
  
  message ReadUserRequest {
    string user_id = 1;
  }
  
  message ReadUserResponse {
    string response = 1;
  }
  
  message ReadOrgRequest {
    string org_id = 1;
  }
  
  message ReadOrgResponse {
    string response = 1;
  }
  